# development-kit

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  development-kit-codex-goal-prd.md  prd-intake-contract.md  skills-lock.json
.agents/skills/: postgres-pro  rust-best-practices  rust-testing  sqlite-database-expert  stripe-best-practices  tauri-v2  vite
.cursor/rules/: codegraph.mdc
.github/: SECURITY.md
.github/workflows/: gate.yml
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/src/: AdvancedReportPanel.tsx  App.tsx  BillingPanel.tsx  Me.tsx  api.test.ts  api.ts  billing.test.ts  billing.ts  entitlements.test.ts  entitlements.ts  featureGate.test.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: feature_gate.rs  lib.rs  license_store.rs  main.rs
apps/desktop/src-tauri/src/products/: mod.rs
apps/desktop/src-tauri/src/products/notes/: mod.rs
apps/desktop/src/products/notes/: NotesScreen.tsx  notesEntitlements.test.ts  notesEntitlements.ts
apps/desktop/src/shell/: PlatformChromeSlot.tsx  Shell.tsx  config.ts  productRegistry.tsx  resolveShellLayout.test.ts  resolveShellLayout.ts
crates/license-sign/: Cargo.toml
crates/license-sign/src/: lib.rs
crates/license-sign/tests/: sign_verify_roundtrip.rs
crates/license-verify/: Cargo.toml
crates/license-verify/src/: lib.rs
crates/local-store/: Cargo.toml
crates/local-store/src/: db.rs  draft.rs  error.rs  lib.rs  migration.rs  product_module.rs
crates/local-store/src/products/: mod.rs  notes.rs
crates/local-store/tests/: notes_product.rs  persistence.rs
crates/shared/: Cargo.toml
crates/shared/src/: audit.rs  billing.rs  dto.rs  entitlements.rs  feature_key.rs  lib.rs  license.rs  plan.rs  product_entitlements.rs  product_feature_key.rs  product_module.rs  sync_queue.rs
crates/shared/tests/: sync_queue_persistence.rs
docs/: CODEGRAPH.md  DEVELOPMENT-KIT-CODEX-GOAL-PRD.md  DEVELOPMENT-KIT-GOAL-PRD.md  PRD-INTAKE-CONTRACT.md  PRODUCT-MODULE-SEAM.md  TAURI-STRIPE-SAAS-ARCHITECTURE.md  ci-self-hosted-runner.md
docs/adr/: 0000-template.md  0001-platform-authority-split.md  0002-capability-crates-and-product-seam.md  0003-mechanical-authority-enforcement.md  0004-single-product-platform-chrome-slot.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md  workflow.md
migrations/: README.md
migrations/postgres/: 0001_init.sql
migrations/sqlite/: 0001_init.sql  0002_local_product_state.sql
services/api/: Cargo.toml
services/api/src/: audit.rs  auth.rs  billing.rs  entitlement.rs  feature_gate.rs  lib.rs  license.rs  main.rs  me.rs  me_entitlements.rs  pg_migration.rs  principal.rs  product_module.rs  store.rs  webhook.rs
services/api/src/products/: mod.rs
services/api/src/products/notes/: entitlement.rs  mod.rs  route.rs
services/api/tests/: billing_sessions.rs  feature_gate.rs  feature_gate_authenticated.rs  health.rs  license_refresh.rs  me.rs  me_entitlements.rs  notes_product.rs  pg_product_migration.rs  product_module.rs  stripe_webhook.rs
xtask/: Cargo.toml
xtask/src/: bans.rs  coverage.rs  edges.rs  leakscan.rs  lib.rs  main.rs  registry.rs  seam_scan.rs
xtask/tests/: leak_scan.rs
