[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/license-verify",
    "crates/license-sign",
    "crates/local-store",
    "services/api",
    "apps/desktop/src-tauri",
    "xtask",
]

# Keep the desktop app self-contained for bundling, but it is part of the
# workspace so the dependency graph (ADR-0002) is verified in one place.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
# Capability crates are the contract surface (ADR-0002).
shared = { path = "crates/shared" }
license-verify = { path = "crates/license-verify" }
license-sign = { path = "crates/license-sign" }

# Pinned to versions verified against crates.io on 2026-06-05.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", default-features = false }
thiserror = "2"
# Wire encoding for signed license-token bytes (payload + signature) over JSON.
base64 = "0.22"
# Local SQLite store (desktop / local-store crate only — never the server tree).
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"

# Cloud API stack (services/api only — never the desktop tree).
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Stripe webhook HMAC-SHA256 signature verification (services/api ONLY — billing
# authority is backend-only, ADR-0001/0002; these must never reach the desktop
# tree, where the cargo-deny bans + crate-edge gate enforce the boundary).
hmac = "0.12"
sha2 = "0.10"

[profile.release]
strip = true
