[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cloud Rust/Axum backend: the SaaS authority (identity, entitlements, billing, license issuance)."

[[bin]]
name = "api"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
shared = { workspace = true }
# Typed error taxonomy for the Postgres migration runner (issue #64), mirroring
# the local-store crate's thiserror-based error enum. Not a DB client: adds no
# Postgres driver to the workspace (the runner is driver-agnostic).
thiserror = { workspace = true }
# Backend-only: holds the private signing key. Compile-fact proof that license
# issuance lives here, not on the desktop (ADR-0002).
license-sign = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
# Stripe webhook signature verification — backend-only (ADR-0001/0002). `hmac`
# provides constant-time `verify_slice` (subtle-backed); we never hand-roll the
# MAC comparison. Banned from the desktop tree by cargo-deny + the crate-edge gate.
hmac = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
# Crypto primitive, used in tests to confirm issued tokens carry a valid
# ed25519 signature. NOT `license-verify`: the backend must not depend on the
# desktop verifier capability crate, even in tests (ADR-0002 edge check).
ed25519-dalek = { workspace = true }
# HMAC-SHA256 helper for the webhook fixture tests: sign a payload with a test
# secret in Stripe's `t=...,v1=...` scheme and prove the real verifier accepts it.
hmac = { workspace = true }
sha2 = { workspace = true }
